// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalderaNotice Matches snapshot with Success message 1`] = `
<div
  className="success"
>
  Good Things!
</div>
`;

exports[`CalderaNotice Matches snapshot with error message 1`] = `
<div
  className="error"
>
  Bad Things!
</div>
`;
